Fix profile image overflow

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -123,6 +123,13 @@
   gap: 0.5rem;
   cursor: pointer;  
 }
+.profile-info img {
+  border-radius: 50%;
+  height: 2.5rem;
+  width: 2.5rem;
+  object-fit: cover;
+}
+
 .profile-info article{
   font-size: 1.2rem;
   font-weight: bold;
