--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -1,3 +1,72 @@
+* {
+  --accent-sec-color: #7fc2f5;
+}
+.prof-img,
+.profile-placeholder {
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+  justify-content: center;
+  width: 4rem;
+  height: 4rem;
+  background-color: var(--accent-sec-color);
+}
+
+.prof-img, .img-placeholder-profile {
+  text-align: center;
+  line-height: 4rem;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+
+.prof-img img, .img-placeholder-profile img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.edit-profile-icon {
+  border-color: green;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.3s ease; 
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-placeholder:hover .edit-profile-icon {
+  opacity: 1;
+  z-index: 2;
+}
+.profile-info .img-placeholder-profile {
+  box-sizing: border-box;
+  font-size: 2rem;
+  background-color: var(--accent-sec-color);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+
+.profile-info .pic,
+.profile-info .img-placeholder-profile {
+  width: 4rem;
+  aspect-ratio: 1;
+  object-fit: cover;
+  border-radius: 50%;
+  padding: 2px;
+  border: solid 1px var(--bg-color);
+}
+
 .bio {
   position: inherit;
   width: auto;
